browser/extensions/onboarding/content/onboarding.css
#
onboarding
-
overlay
*
{
box
-
sizing
:
border
-
box
;
}
#
onboarding
-
overlay
{
position
:
fixed
;
top
:
0
;
left
:
0
;
right
:
0
;
bottom
:
0
;
z
-
index
:
20999
;
color
:
#
4d4d4d
;
background
:
rgb
(
54
57
89
0
.
8
)
;
display
:
none
;
}
#
onboarding
-
overlay
.
onboarding
-
opened
{
display
:
block
;
}
#
onboarding
-
overlay
-
icon
{
width
:
36px
;
height
:
29px
;
position
:
absolute
;
cursor
:
pointer
;
top
:
30px
;
offset
-
inline
-
start
:
30px
;
background
:
url
(
"
img
/
overlay
-
icon
.
svg
"
)
no
-
repeat
;
}
#
onboarding
-
notification
-
icon
:
:
after
#
onboarding
-
overlay
-
icon
:
:
after
{
background
:
#
5ce6e6
;
position
:
absolute
;
font
-
size
:
12px
;
border
:
1px
solid
#
fff
;
text
-
align
:
center
;
color
:
#
10404a
;
box
-
sizing
:
content
-
box
;
}
#
onboarding
-
overlay
-
icon
:
:
after
{
content
:
attr
(
aria
-
label
)
;
top
:
-
6px
;
offset
-
inline
-
start
:
39px
;
border
-
radius
:
22px
;
padding
:
5px
8px
;
min
-
width
:
100px
;
}
#
onboarding
-
overlay
-
dialog
.
onboarding
-
hidden
{
display
:
none
;
}
#
onboarding
-
overlay
-
close
-
btn
#
onboarding
-
notification
-
close
-
btn
{
position
:
absolute
;
top
:
15px
;
offset
-
inline
-
end
:
15px
;
cursor
:
pointer
;
width
:
16px
;
height
:
16px
;
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
sidebar
/
close
.
svg
)
;
background
-
position
:
center
center
;
background
-
repeat
:
no
-
repeat
;
padding
:
12px
;
}
#
onboarding
-
overlay
-
close
-
btn
:
hover
#
onboarding
-
notification
-
close
-
btn
:
hover
{
background
-
color
:
rgba
(
204
204
204
0
.
6
)
;
}
#
onboarding
-
overlay
.
onboarding
-
opened
>
#
onboarding
-
overlay
-
dialog
{
width
:
960px
;
height
:
510px
;
background
:
#
f5f5f7
;
border
:
1px
solid
rgba
(
9
6
13
0
.
1
)
;
border
-
radius
:
3px
;
position
:
relative
;
margin
:
0
calc
(
50
%
-
480px
)
;
top
:
calc
(
50
%
-
255px
)
;
display
:
grid
;
grid
-
template
-
rows
:
[
dialog
-
start
]
70px
[
page
-
start
]
1fr
[
footer
-
start
]
30px
[
dialog
-
end
]
;
grid
-
template
-
columns
:
[
dialog
-
start
]
230px
[
page
-
start
]
1fr
[
dialog
-
end
]
;
}
media
(
max
-
height
:
510px
)
{
#
onboarding
-
overlay
.
onboarding
-
opened
>
#
onboarding
-
overlay
-
dialog
{
top
:
0
;
}
}
#
onboarding
-
overlay
-
dialog
>
header
{
grid
-
row
:
dialog
-
start
/
page
-
start
;
grid
-
column
:
dialog
-
start
/
tour
-
end
;
margin
-
top
:
22px
;
margin
-
bottom
:
0
;
margin
-
inline
-
end
:
0
;
margin
-
inline
-
start
:
36px
;
font
-
size
:
22px
;
font
-
weight
:
200
;
}
#
onboarding
-
overlay
-
dialog
>
nav
{
grid
-
row
:
dialog
-
start
/
footer
-
start
;
grid
-
column
-
start
:
dialog
-
start
;
margin
-
top
:
40px
;
margin
-
bottom
:
0
;
margin
-
inline
-
end
:
0
;
margin
-
inline
-
start
:
0
;
padding
:
0
;
}
#
onboarding
-
overlay
-
dialog
>
footer
{
grid
-
row
:
footer
-
start
;
grid
-
column
:
dialog
-
start
/
tour
-
end
;
font
-
size
:
13px
;
}
#
onboarding
-
tour
-
hidden
-
checkbox
{
margin
-
inline
-
start
:
27px
;
margin
-
inline
-
end
:
10px
;
}
#
onboarding
-
tour
-
list
{
margin
:
40px
0
0
0
;
padding
:
0
;
}
#
onboarding
-
tour
-
list
>
li
{
list
-
style
:
none
;
padding
-
inline
-
start
:
49px
;
padding
-
top
:
14px
;
padding
-
bottom
:
14px
;
margin
-
inline
-
start
:
16px
;
margin
-
bottom
:
9px
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
left
17px
top
14px
;
background
-
size
:
20px
;
font
-
size
:
16px
;
cursor
:
pointer
;
}
#
onboarding
-
tour
-
list
>
li
:
dir
(
rtl
)
{
background
-
position
-
x
:
right
17px
;
}
#
onboarding
-
tour
-
list
>
li
.
onboarding
-
complete
:
:
before
{
content
:
url
(
"
img
/
icons_tour
-
complete
.
svg
"
)
;
position
:
relative
;
offset
-
inline
-
start
:
3px
;
top
:
-
10px
;
float
:
inline
-
start
;
}
#
onboarding
-
tour
-
list
>
li
.
onboarding
-
complete
{
padding
-
inline
-
start
:
29px
;
}
#
onboarding
-
tour
-
list
>
li
.
onboarding
-
active
#
onboarding
-
tour
-
list
>
li
:
hover
{
color
:
#
0A84FF
;
}
#
onboarding
-
tour
-
is
-
default
-
browser
-
msg
{
font
-
size
:
16px
;
line
-
height
:
21px
;
float
:
inline
-
end
;
margin
-
inline
-
end
:
26px
;
margin
-
top
:
-
32px
;
text
-
align
:
center
;
}
#
onboarding
-
tour
-
sync
-
page
form
{
text
-
align
:
center
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
h3
{
text
-
align
:
center
;
margin
:
0
;
font
-
size
:
22px
;
font
-
weight
:
normal
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
p
{
text
-
align
:
center
;
margin
:
3px
0
0
0
;
font
-
size
:
15px
;
font
-
weight
:
normal
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
input
{
margin
-
top
:
10px
;
height
:
40px
;
width
:
80
%
;
padding
:
7px
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
#
onboarding
-
tour
-
sync
-
button
{
padding
:
10px
20px
;
min
-
width
:
40
%
;
margin
:
15px
0
;
float
:
none
;
}
.
onboarding
-
tour
-
page
{
grid
-
row
:
page
-
start
/
footer
-
end
;
grid
-
column
:
page
-
start
;
display
:
grid
;
grid
-
template
-
rows
:
[
tour
-
page
-
start
]
393px
[
tour
-
button
-
start
]
1fr
[
tour
-
page
-
end
]
;
grid
-
template
-
columns
:
[
tour
-
page
-
start
]
368px
[
tour
-
content
-
start
]
1fr
[
tour
-
page
-
end
]
;
}
.
onboarding
-
tour
-
description
{
grid
-
row
:
tour
-
page
-
start
/
tour
-
page
-
end
;
grid
-
column
:
tour
-
page
-
start
/
tour
-
content
-
start
;
font
-
size
:
15px
;
line
-
height
:
22px
;
padding
-
inline
-
start
:
40px
;
padding
-
inline
-
end
:
28px
;
}
.
onboarding
-
tour
-
description
>
h1
{
font
-
size
:
36px
;
margin
-
top
:
16px
;
font
-
weight
:
300
;
line
-
height
:
44px
;
}
.
onboarding
-
tour
-
content
{
grid
-
row
:
tour
-
page
-
start
/
tour
-
button
-
start
;
grid
-
column
:
tour
-
content
-
start
/
tour
-
page
-
end
;
padding
:
0
;
text
-
align
:
end
;
}
.
onboarding
-
tour
-
content
>
img
{
width
:
352px
;
margin
:
0
;
}
.
onboarding
-
tour
-
content
>
img
:
dir
(
rtl
)
{
transform
:
scaleX
(
-
1
)
;
}
.
onboarding
-
tour
-
content
>
iframe
{
width
:
100
%
;
height
:
100
%
;
border
:
none
;
}
/* ... */

